hw10-saga/hw10-saga-delivery/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: otus-hw10-saga-delivery-app
  name: otus-hw10-saga-delivery-deployment
spec:
    replicas: 1
    selector:
       matchLabels:
          app: otus-hw10-saga-app
    template:
       metadata:
          labels:
             app: otus-hw10-saga-app
       spec:
          containers:
          - name: otus-hw10-saga-delivery
            image: evgen2sat/otus-hw10-saga-delivery:1.0.0
            ports:
              - name: web 
                containerPort: 8006
            livenessProbe:
              httpGet:
                port: 8006
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8006
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
